# log-search-mcp

./: .gitignore  README.md  example_config.toml  main.py  pyproject.toml
log_search_mcp/: __init__.py  server.py
log_search_mcp/config/: __init__.py  manager.py
log_search_mcp/models/: __init__.py  config.py
log_search_mcp/tools/: __init__.py  log_search.py
log_search_mcp/utils/: __init__.py  ssh_manager.py
tests/: __init__.py  test_config.py
