[project]
name = "log-search-mcp"
version = "0.1.0"
description = "MCP server for searching application logs across multiple servers using SSH"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "asyncssh>=2.14.0",
    "pydantic>=2.0.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
log-search-mcp = "log_search_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
